[package]
name = "sup-rs"
version = "0.1.0"
edition = "2021"
authors = ["Sup-rs Team"]
description = "A Rust implementation of Stack Up - parallel deployment tool"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
colored = "2.0"
whoami = "1.4"
chrono = "0.4"
dirs = "5.0"
